<resources>
    <string name="app_name">AstrooBus</string>
    <string name="back_arrow">back_arrow</string>
    <string name="create_new">Create new</string>
    <string name="account">Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back!</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="manage_bus_filter">
        <item>All</item>
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

    <string-array name="deploy_bus_time">
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
    </string-array>

    <string-array name="transaction_bus_filter">
        <item>Available</item>
        <item>Sold Out</item>
    </string-array>
</resources>