<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/register_back_arrow"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/back_arrow"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/register_back_arrow"
        app:layout_constraintStart_toEndOf="@id/register_back_arrow"
        android:layout_marginTop="30dp"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
         />

        <View
            android:layout_width="45dp"
            android:layout_height="10dp"
            android:background="@drawable/horizontal_oval_line"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="50dp"
            />

<!--        full name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/full_name"
            />

        <EditText
            android:id="@+id/register_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="18sp"
            android:textColorHint="@color/placeholder"
            android:textStyle="bold"
            android:background="@drawable/input_border"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:inputType="text"
            android:autofillHints="name"
            android:width="300dp"
            />

<!--        email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/email_address"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/register_et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_address"
            android:textSize="18sp"
            android:textColorHint="@color/placeholder"
            android:textStyle="bold"
            android:background="@drawable/input_border"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:width="300dp"
            />

<!--        password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/password"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textSize="18sp"
            android:textColorHint="@color/placeholder"
            android:textStyle="bold"
            android:background="@drawable/input_border"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:width="300dp"
            />

<!--        confirm password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/confirm_password"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/register_et_conf_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            android:textSize="18sp"
            android:textColorHint="@color/placeholder"
            android:textStyle="bold"
            android:background="@drawable/input_border"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:width="300dp"
            />

<!--        phone number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/phone_number"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/register_et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number"
            android:textSize="18sp"
            android:textColorHint="@color/placeholder"
            android:textStyle="bold"
            android:background="@drawable/input_border"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:inputType="phone"
            android:autofillHints="phone"
            android:width="300dp"
            />


        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary_rounded"
            android:text="@string/register"
            android:textSize="22sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>