<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/register_back_arrow"
            app:layout_constraintTop_toBottomOf="@id/register_back_arrow">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <View
                android:layout_width="45dp"
                android:layout_height="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/horizontal_oval_line" />

            <!--        email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_border"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--        password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:autofillHints="password"
                android:background="@drawable/input_border"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/material_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:padding="15dp"
                android:text="Forgot your password?"
                android:textColor="@color/default_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_primary_rounded"
                android:maxWidth="300dp"
                android:text="@string/login"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>